# LegacyCode_BeCPP

./: README.md
01_golden_master/trivia/: CMakeLists.txt  Game.cpp  Game.h  README.md
01_golden_master/trivia/tests/: golden_master_function_test.cpp  golden_master_test.cpp  testrunner.cpp
02_modernize_using_clang_tidy/: CMakeLists.txt  README.md  main.cpp
02_modernize_using_clang_tidy/tests/: gm_output.txt  golden_master_test.cpp  testrunner.cpp
